--- a/TutorDot_iOS_1/TutorDot_iOS/Storyboards/Alert.storyboard
+++ b/TutorDot_iOS_1/TutorDot_iOS/Storyboards/Alert.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="lrw-pG-tB9">
-    <device id="retina4_7" orientation="portrait" appearance="light"/>
+    <device id="retina6_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -12,15 +12,48 @@
             <objects>
                 <viewController storyboardIdentifier="AlertVC" id="lrw-pG-tB9" customClass="AlertVC" customModule="TutorDot_iOS" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="taZ-80-TKB">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qbX-1D-70z">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="94"/>
+                                <color key="backgroundColor" red="0.40784313729999999" green="0.45882352939999999" blue="0.86666666670000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="94" id="PGV-WM-mi4"/>
+                                </constraints>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="알림" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OrM-Nv-eKq">
+                                <rect key="frame" x="20" y="124" width="31.333333333333329" height="21"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Ucf-jW-pTy">
+                                <rect key="frame" x="0.0" y="170" width="414" height="692"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.96078431372549022" green="0.96470588235294119" blue="0.98039215686274506" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstItem="nyK-HM-0dG" firstAttribute="trailing" secondItem="qbX-1D-70z" secondAttribute="trailing" id="6tW-cn-xsW"/>
+                            <constraint firstItem="Ucf-jW-pTy" firstAttribute="trailing" secondItem="nyK-HM-0dG" secondAttribute="trailing" id="AMd-69-XzQ"/>
+                            <constraint firstItem="OrM-Nv-eKq" firstAttribute="top" secondItem="qbX-1D-70z" secondAttribute="bottom" constant="30" id="Ag1-9Z-mEG"/>
+                            <constraint firstItem="qbX-1D-70z" firstAttribute="leading" secondItem="nyK-HM-0dG" secondAttribute="leading" id="OBh-2Z-ORh"/>
+                            <constraint firstItem="Ucf-jW-pTy" firstAttribute="leading" secondItem="nyK-HM-0dG" secondAttribute="leading" id="V2x-QV-pkz"/>
+                            <constraint firstItem="nyK-HM-0dG" firstAttribute="bottom" secondItem="Ucf-jW-pTy" secondAttribute="bottom" id="XiC-3Q-PVO"/>
+                            <constraint firstItem="OrM-Nv-eKq" firstAttribute="leading" secondItem="nyK-HM-0dG" secondAttribute="leading" constant="20" id="bC1-l5-NIk"/>
+                            <constraint firstItem="Ucf-jW-pTy" firstAttribute="top" secondItem="OrM-Nv-eKq" secondAttribute="bottom" constant="25" id="xIX-Rn-KhY"/>
+                            <constraint firstItem="qbX-1D-70z" firstAttribute="top" secondItem="taZ-80-TKB" secondAttribute="top" id="zwh-gu-3DV"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="nyK-HM-0dG"/>
                     </view>
+                    <connections>
+                        <outlet property="noticeTableView" destination="Ucf-jW-pTy" id="qx9-2p-BuV"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bhL-5f-FY2" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="155" y="89"/>
+            <point key="canvasLocation" x="153.62318840579712" y="88.392857142857139"/>
         </scene>
     </scenes>
 </document>
